<resources>

    <string name="app_name">PlantPlaces12FS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="lblLatitude">Lat:</string>
    <string name="lblLongitude">Lng:</string>
    <string name="lblDescription">Description:</string>
    <string name="lblSaveLocation">Save</string>
    <string name="lblUpload">Upload</string>
    <string name="blank"></string>
    <string name="lblSearchPlants">Search Plants</string>
    <string name="lblPlantName">Name:</string>
    <string name="mnuSearchPlants">Search Plants</string>
    <string name="mnuLocation">Location</string>
    <string name="lblGenus">Genus:</string>
    <string name="lblSpecies">Species:</string>
    <string name="lblCultivar">Cultivar:</string>
    <string name="lblCommon">Common:</string>
    <string name="lblHeight">Height:</string>
    <string name="lblSavePlant">Save Plant</string>
    <string name="lblAddPlant">Add Plant</string>

</resources>